[package]
authors = ["Ashutosh Varma <ashutoshvarma11@live.com>"]
categories = ["development-tools::build-utils"]
description = "Simple serializer to embed structs/tables as const Rust code using Debug trait"
edition = "2018"
license = "MIT"
name = "constuneval"
readme = "README.md"
repository = "https://github.com/ashutoshvarma/constuneval"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
